Change identifier to handle
